core/postgres/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-tls
  namespace: test
spec:
  tls:
  - hosts:
      - database.claytonc.dev
    secretName: c
  rules:
  - host: database.claytonc.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-cluster
            port:
              number: 80
---
